# Thesis_Project

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements_logged.txt
.github/workflows/: ci.yml
experiments/: inference.py  train.py
experiments/configs/: hpo_config.yaml  train_config.yaml  train_config_champion.yaml
experiments/result_champion/: config.json  tokenizer.json
experiments/results_champion/: best_checkpoint.pt
scripts/: create_split.py  data_explore.py  evaluate_f1.py  inference.py  inference_batch.py  inference_example.py  plot_embeddings.py  streamlit_labels.py
scripts/example_training_loop/: training_loop.py
scripts/plotting/: plot_confusion_matrix.py  plot_results_csv.py
slurm_jobs/: TCGA_train.job  champion.job  hpo.job  run_champion.job  run_hpo.job  train.job  vllm.job
slurm_jobs/job_outputs/: ch_job_18981306.out  ch_job_18995500.out  job_18989799.out  job_18990983.out  train_job_run_1.out  train_job_run_2.out  train_job_run_3.out
src/: dataset.py
src/ml_core/data/: __init__.py  dataset.py  loader.py  tcga.py
src/ml_core/models/: __init__.py  mlp.py
src/ml_core/solver/: trainer.py
src/ml_core/tracking/: mlflow_tracker.py
src/ml_core/utils/: __init__.py  logging.py  tracker.py
vllm/: how_to_run.md
vllm/python_scripts/: batch_LLM_classification.py
vllm/python_scripts/LLM_prompts/: LLM_prompt_v2.md
vllm/src/: how_to_run.md
vllm/src/data/: prompts.jsonl
vllm/src/python_scripts/: batch_LLM_classification.py  batch_inference_decoder.py  batch_inference_encoder.py  single_inference_decoder.py
vllm/src/python_scripts/LLM_prompts/: LLM_prompt_child_parent.md  LLM_prompt_v1.md  LLM_prompt_v3.md  LLM_prompt_v4.md
vllm/src/slurm_jobs/: batch_LLM_labeling.job  batch_inference_decoder.job  batch_inference_encoder.job
vllm/src/slurm_jobs/job_outputs/: batch_LLM_Full.err  batch_LLM_Full.out  batch_LLM_job_test.err  batch_LLM_prompt_v3.err  batch_LLM_prompt_v3.out  batch_LLM_prompt_v4.err  batch_LLM_prompt_v4.out  batch_LLM_prompt_v4_2.err  batch_LLM_prompt_v4_2.out
