[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# --- PROJECT METADATA & DEPENDENCIES ---
[project]
name = "ml_core"
version = "0.1.0"
description = "UvA Bachelors Thesis Project"
readme = "README.md"
requires-python = ">=3.12"  # Updated to reflect your active 3.12 wheels
dependencies = [
    "numpy==2.3.5",
    "matplotlib==3.10.9",
    "seaborn==0.13.2",
    "streamlit==1.58.0",
    "vllm==0.22.1",
    "pandas==2.3.3",
    "polars==1.41.2",
    "plotly==6.8.0",
    "torch==2.11.0",
    "torchvision==0.26.0",
    "torcheval==0.0.7",
    "tensorboard==2.20.0",
    "umap-learn==0.5.12",
    "tqdm==4.68.2",
    "pyyaml==6.0.3",
    "python-dotenv==1.2.2",
    "scikit-learn==1.9.0",
    "iterative-stratification==0.1.9",
    "pathlib==1.0.1",
    "mlflow==3.13.0",
    "transformers==5.11.0",
    "accelerate==1.14.0",
    # Dev tools
    "pytest==9.0.3",
    "ruff==0.15.17",
    "pre-commit==4.6.0",
]

# --- TOOL CONFIGURATION ---
[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [".git", "__pycache__", "venv"]
# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.lint]
# E: pycodestyle errors
# F: Pyflakes
# I: isort (Import Sorting - MLOps critical!)
# B: flake8-bugbear (Likely bugs)
select = ["E", "F", "I", "B"]
# B905: no strict=True needed for zip
ignore = ["E501", "B905", "E741"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"